<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_constraint"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:background="#952A63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_signin"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="350dp"
        android:layout_height="141dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.302"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_containt"
        android:layout_width="313dp"
        android:layout_height="59dp"
        style="@style/CustomTextInputLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_login"
            style="@style/CustomStartIconEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/custom_border"
            android:hint="@string/user_id"
            android:inputType="text"
            app:hintTextColor="@color/customHintTextColor"
            android:textColorHint="@color/customHintTextColor"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/forgot_user"
        android:layout_width="313dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:text="@string/forgot_user_id"
        android:textAlignment="textEnd"
        android:textColor="#952A63"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:onClick="openWebsite"/>

    <Button
        android:id="@+id/button_next"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_button_background"
        android:text="@string/next_arrow"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62"
        android:onClick="goToSelectCompany"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_constraint"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:background="#952A63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/new_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textColor="#37AD41"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>